Updated directory/project names to reflect changes in directory structure

--- a/jsdai-eclipse/net.jsdai.releng/build.xml
+++ b/jsdai-eclipse/net.jsdai.releng/build.xml
@@ -35,7 +35,7 @@
 
 	<property file="buckminster.properties"/>
 	<property name="topProject" value="net.jsdai.site"/>
-	<property name="archivedSitePrefix" value="jsdai-developer"/>
+	<property name="archivedSitePrefix" value="jsdai-eclipse"/>
 	<property name="cvsMethod" value="ext"/>
 	<property name="cvsUser" value=""/>
 	<property name="lksoftBuildBase" value="file:/home/jsdai/builds"/>
