--- a/jsdai-installer/build.xml
+++ b/jsdai-installer/build.xml
@@ -24,7 +24,7 @@
  */
 -->
 
-<project name="jsdai-standalone" default="build" basedir=".">
+<project name="jsdai-installer" default="build" basedir=".">
 
     <!-- properties provided from the master and local properties files -->
     <property environment="env"/>
@@ -34,7 +34,7 @@
     <!-- Directory for CVS checkout -->
     <property name="cvs.dir" location="../.." />
     <property name="standalone.cvs.modules"
-              value="modules/jsdai-standalone" />
+              value="modules/jsdai-installer" />
     <property name="cvs.rsh" value="ssh" />
 
     <target name="-base.environment">
@@ -49,7 +49,7 @@
         <property name="out.dir" location="out"/>
 
         <!-- Directory in which instaler resource archives are placed -->
-        <property name="resources.out.dir" location="${java.io.tmpdir}/jsdai-developer"/>
+        <property name="resources.out.dir" location="${java.io.tmpdir}/jsdai-installer"/>
 
         <!-- Directories in which source files are placed -->
         <property name="src.dir" location="src"/>
@@ -65,7 +65,7 @@
         <!-- Directory in which source files are placed -->
         <property name="ia.dir" location="${user.home}/InstallAnywhere"/>
 
-        <property name="jsdai.dir" location="../jsdai-runtime"/>
+        <property name="jsdai.dir" location="../jsdai-core"/>
         <property name="jsdai.lib.dir" location="${jsdai.dir}/lib"/>
         <property name="jsdai.out.dir" location="${jsdai.dir}/out"/>
         <property name="xim.dir" location="../xim-library"/>
