Corrected cvs module path; fixed files to ignore by cvs

--- a/jsdai-core/build.xml
+++ b/jsdai-core/build.xml
@@ -33,9 +33,9 @@
 	<property file="${user.home}/.ant-global.properties"/>
 
 	<!-- Directory for CVS checkout -->
-	<property name="cvs.dir" location="../.." />
+	<property name="cvs.dir" location="." />
 	<property name="core.cvs.modules"
-	          value="modules/core express/EXPRESS express/COMPLEX_ENTITIES express/SHORT_NAMES" />
+	          value="jsdai-core" />
 	<property name="cvs.rsh" value="ssh" />
 
 	<target name="-base.environment">
