Corrected again cvs module path

--- a/jsdai-core/build.xml
+++ b/jsdai-core/build.xml
@@ -34,8 +34,7 @@
 
 	<!-- Directory for CVS checkout -->
 	<property name="cvs.dir" location="." />
-	<property name="core.cvs.modules"
-	          value="jsdai-core" />
+	<property name="core.cvs.modules" value="." />
 	<property name="cvs.rsh" value="ssh" />
 
 	<target name="-base.environment">
