Corrected cvs module path

--- a/jsdai-installer/build.xml
+++ b/jsdai-installer/build.xml
@@ -32,9 +32,8 @@
     <property file="${user.home}/.ant-global.properties"/>
 
     <!-- Directory for CVS checkout -->
-    <property name="cvs.dir" location="../.." />
-    <property name="standalone.cvs.modules"
-              value="modules/jsdai-installer" />
+    <property name="cvs.dir" location="." />
+    <property name="standalone.cvs.modules" value="" />
     <property name="cvs.rsh" value="ssh" />
 
     <target name="-base.environment">
