Added xim_aim processor for JSDAI Eclipse 4.2.0 release

--- a/xim-library/build.xml
+++ b/xim-library/build.xml
@@ -946,6 +946,11 @@
 	  <param name="doc.title" value="ARM Schemas"/>
 	  <param name="library.name" value="JSDAI STEPMOD ARM Library"/>
 	</antcall>
+  	<ant antfile="etc/build_xim_util.xml" inheritall="true" target="build">
+  		<property name="core.lib.dir" location="${jsdai.out.dir}"/>
+  		<property name="sysrep.lib.dir" location="${out.dir}"/>
+  		<property name="jars.dir" location="${out.dir}"/>
+  	</ant>
   </target>
 
   <target name="-clean.jsdai" if="dependency.isset" depends="-set.properties">
