Added version 4.2.1 updates

--- a/jsdai-core/build.xml
+++ b/jsdai-core/build.xml
@@ -348,7 +348,7 @@ buildId=${buildId}
 			</classpath>
 			<sysproperty key="jsdai.properties" value="${expressCompiler.dir}"/>
 			<jvmarg line="${expressCompiler.jvmargs}"/>
-			<arg line="-repository -is -relax -binaries -java -no_active_nodes -no_amendment"/>
+			<arg line="-repository -is -relax -binaries -java -no_active_nodes -no_amendment -nc"/>
 			<arg value="-express"/>
 			<arg file="${expressCompiler.dir}/ExpressCompilerRepo.exp"/>
 			<arg value="-complex"/>
@@ -504,7 +504,7 @@ buildId=${buildId}
 			</classpath>
 			<sysproperty key="jsdai.properties" value="${expressCompiler.dir}"/>
 			<jvmarg line="${expressCompiler.jvmargs}"/>
-			<arg line="-java -is -relax -inst -binaries -no_active_nodes -no_amendment"/>
+			<arg line="-java -is -relax -inst -binaries -no_active_nodes -no_amendment -nc"/>
 			<arg value="-express"/>
 			<arg file="${expressCompiler.dir}/mapping_schemas.exp"/>
 			<arg value="-complex"/>
