Updated changes from version 4.3 development snapshot

--- a/jsdai-eclipse/net.jsdai.apache/build.properties
+++ b/jsdai-eclipse/net.jsdai.apache/build.properties
@@ -1,7 +1,7 @@
 source.apache.jar = src/
 output.apache.jar = bin/
 bin.includes = apache.jar,\
-               commons-lang-*.jar,\
+               commons-lang-1.0.1.jar,\
                commons-collections.jar,\
                META-INF/
 qualifier = 5
