--- a/jsdai-eclipse/net.jsdai.express_g/plugin.xml
+++ b/jsdai-eclipse/net.jsdai.express_g/plugin.xml
@@ -135,6 +135,12 @@
             icon="icons/import_from_exd.gif"
             id="net.jsdai.express_g.wizards.ImportRepository"
             name="JSDAI Express dictionary data (*.exd)"/>
+      <wizard
+            category="net.jsdai.wizard.category"
+            class="jsdai.express_g.wizards.ImportDiagram"
+            icon="icons/import_from_exg.gif"
+            id="net.jsdai.express_g.wizards.ImportDiagram"
+            name="JSDAI Express-G diagram (*.exg)"/>
    </extension>
    <extension
          point="org.eclipse.ui.preferencePages">
