--- a/jsdai-eclipse/net.jsdai.xim.jlib/build.properties
+++ b/jsdai-eclipse/net.jsdai.xim.jlib/build.properties
@@ -1,3 +1,7 @@
 bin.includes = META-INF/,\
                jsdai_xim_full.jar,\
-               plugin.xml
+               plugin.xml,\
+               jsdai_xim_extension1.jar,\
+               jsdai_xim_extension2.jar,\
+               jsdai_xim_extension3.jar,\
+               jsdai_xim_extension4.jar
