Fixed pack.zips with defaultexcludes="false"

--- a/jsdai-installer/build.xml
+++ b/jsdai-installer/build.xml
@@ -280,14 +280,14 @@ buildId=${buildId}
     	<property name="xim.library.version" 
     		value="${stepmod.version.major}_${stepmod.version.middle}_${stepmod.version.minor}"/>
     	<zip destfile="${out.dir}/jsdai-core_v${jsdai.version}.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="jsdai-core/lib/**"/>
     			<include name="jsdai-core/out/**"/>
 	    		<exclude name="**/CVS/**"/>
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/jsdai-core-src_v${jsdai.version}.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="jsdai-core/**"/>
     			<exclude name="jsdai-core/build/**"/>
     			<exclude name="jsdai-core/out/**"/>
@@ -295,20 +295,20 @@ buildId=${buildId}
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/xim-library_v${xim.library.version}_part1.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="xim-library/out/**"/>
     			<exclude name="xim-library/out/jsdai_xim_full_api_ref.zip"/>
 	    		<exclude name="**/CVS/**"/>
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/xim-library_v${xim.library.version}_part2.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="xim-library/out/jsdai_xim_full_api_ref.zip"/>
 	    		<exclude name="**/CVS/**"/>
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/xim-library-src_v${xim.library.version}.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="xim-library/**"/>
     			<exclude name="xim-library/build/**"/>
     			<exclude name="xim-library/out/**"/>
@@ -316,7 +316,7 @@ buildId=${buildId}
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/jsdai-installer-src_v${jsdai.version}.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="jsdai-installer/**"/>
     			<exclude name="jsdai-installer/build/**"/>
     			<exclude name="jsdai-installer/out/**"/>
@@ -324,7 +324,7 @@ buildId=${buildId}
     		</fileset>
     	</zip>
     	<zip destfile="${out.dir}/jsdai-eclipse-src_v${jsdai.version}.zip">
-    		<fileset dir="${top.dir}">
+    		<fileset dir="${top.dir}" defaultexcludes="false">
     			<include name="jsdai-eclipse/**"/>
 	    		<exclude name="**/CVS/**"/>
     		</fileset>
